fix multiselect chip wrapping

--- a/client/src/styles/PortfolioFilters.scss
+++ b/client/src/styles/PortfolioFilters.scss
@@ -202,6 +202,7 @@
             font-size: 1.2rem;
             color: $justfix-grey-700;
             display: flex;
+            width: 100%;
             .filter-subtitle {
               margin-right: auto;
             }
@@ -298,44 +299,54 @@
             border: none;
             list-style-type: none;
           }
+          .selectedListContainer {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.4rem;
+            @include for-tablet-portrait-up() {
+              padding: 0 1.2rem;
+            }
 
-          .chip {
-            align-self: flex-start;
-            background-color: $justfix-black;
-            color: $justfix-white;
-            border-radius: 0.8rem;
-            padding: 0 0 0 1.4rem;
-            margin: 0 1.2rem 0.6rem 1.2rem;
-            white-space: pre-line;
-            height: unset;
+            .chip {
+              align-self: flex-start;
+              background-color: $justfix-black;
+              color: $justfix-white;
+              border-radius: 0.8rem;
+              padding: 0 0 0 1.4rem;
+              white-space: pre-line;
+              height: unset;
 
-            button {
-              margin-left: 1.2rem;
-              padding: 1.25rem;
-              .closeIcon {
-                height: 1rem;
-                width: 1rem;
-                stroke-width: 0.2rem;
+              button {
+                margin-left: 1.2rem;
+                padding: 1.25rem;
+                .closeIcon {
+                  height: 1rem;
+                  width: 1rem;
+                  stroke-width: 0.2rem;
+                }
+              }
+
+              &.chip-more {
+                background-color: $justfix-table-grey;
+                color: $justfix-black;
+                border: 1px solid $justfix-black;
+                padding: 0.8rem 0.6rem;
+                margin-bottom: 1.1rem;
               }
             }
-
-            &.chip-more {
-              background-color: $justfix-table-grey;
-              color: $justfix-black;
-              border: 1px solid $justfix-black;
-              padding: 0.8rem 0.6rem;
-              margin-bottom: 1.1rem;
-            }
           }
-          .button.is-text {
-            color: $justfix-grey-700;
-            &.show-less {
-              margin: 1.2rem 0 0 1.2rem;
-              align-self: flex-start;
-            }
-            &.clear-all {
-              margin: 0.8rem 1.2rem 0.9rem 0;
-              align-self: flex-end;
+          .clear-all-container {
+            display: flex;
+            .button.is-text {
+              color: $justfix-grey-700;
+              &.show-less {
+                margin: 1.2rem 0 0 1.2rem;
+                // align-self: flex-start;
+              }
+              &.clear-all {
+                margin: 0.8rem 1.2rem 0.9rem auto;
+                // align-self: flex-end;
+              }
             }
           }
           .button.is-primary {
@@ -408,6 +419,7 @@
             @include for-phone-only {
               .dropdown-container {
                 align-items: flex-start;
+                width: 100%;
                 padding: 2.4rem;
                 .filter-subtitle-container {
                   padding: 0;
@@ -431,6 +443,23 @@
               @include for-phone-only() {
                 margin-left: auto;
               }
+            }
+          }
+          .zip-accordion {
+            .clear-all-container,
+            .search-wrapper,
+            .optionListContainer {
+              width: 18.8rem;
+            }
+          }
+          .zip-accordion,
+          .ownernames-accordion {
+            .clear-all.button.is-text {
+              margin-left: auto;
+              margin-right: 0;
+            }
+            .button.is-primary {
+              align-self: unset;
             }
           }
           .view-results-count {
